--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,15 @@
-Package: BDMMAcorrect
+Package: BDMMA
 Type: Package
 Title: BDMMA could perform meta-analysis for the metagenomic read counts data from different cohorts. 
 Version: 0.1.0
 Author: DAI ZHENWEI <daizwhao@gmail.com>
 Maintainer: DAI ZHENWEI <daizwhao@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Metagenomic sequencing techniques enable quantitative analyses of the microbiome. However, combining the microbial data from these experiments is challenging due to the variations between experiments. The existing methods for correcting batch effects do not consider the interactions between variables—microbial taxa in microbial studies—and the overdispersion of the microbiome data. Therefore, they are not applicable to microbiome data. We develop a new method, Bayesian Dirichlet-multinomial regression meta-analysis (BDMMA), to simultaneously model the batch effects and detect the microbial taxa associated with phenotypes. BDMMA automatically models the dependence among microbial taxa and is robust to the high dimensionality of the microbiome and their association sparsity.
 License: GPL-2|GPL-3[expanded from: GPL (>= 2)]
 Depends: R (>= 3.3.0), ggplot2, vegan, ellipse
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.12), RcppArmadillo (>= 0.8.300.1.0), RcppEigen
+Imports: Rcpp (>= 0.12.12), RcppArmadillo, RcppEigen
 LinkingTo: Rcpp, RcppArmadillo, RcppEigen
 RoxygenNote: 6.0.1
 Suggests: knitr,
