--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 0.12.12), RcppArmadillo, RcppEigen
 LinkingTo: Rcpp, RcppArmadillo, RcppEigen
+biocViews: BatchEffect, Microbiome, Bayesian, DirichletMultinomial, FeatureSelection, MCMC
 RoxygenNote: 6.0.1
 Suggests: knitr,
     rmarkdown
