--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ License: GPL-2|GPL-3[expanded from: GPL (>= 2)]
 Depends: R (>= 3.3.0), ggplot2, vegan, ellipse
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.12), RcppArmadillo, RcppEigen
+Imports: Rcpp (>= 0.12.12), RcppArmadillo, RcppEigen, ggplot2
 LinkingTo: Rcpp, RcppArmadillo, RcppEigen
 biocViews: BatchEffect, Microbiome, Bayesian, DirichletMultinomial, FeatureSelection, MCMC
 RoxygenNote: 6.0.1
