--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,9 @@
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, evalCpp)
+importFrom(ggplot2, ggplot)
+importFrom(ggplot2, aes)
+importFrom(ggplot2, geom_line)
+importFrom(ggplot2, ggtitle)
+importFrom(ggplot2, theme)
+importFrom(ggplot2, element_text)
 useDynLib(BDMMAcorrect)
