--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,8 @@ importFrom(ggplot2, geom_line)
 importFrom(ggplot2, ggtitle)
 importFrom(ggplot2, theme)
 importFrom(ggplot2, element_text)
+importFrom(ggplot2, geom_point)
+importFrom(ggplot2, element_blank)
+importFrom(ggplot2, element_line)
+importFrom(ggplot2, geom_path)
 useDynLib(BDMMAcorrect)
