--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,7 @@
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, evalCpp)
+importFrom(RcppArmadillo)
+importFrom(RcppEigen)
 importFrom(ggplot2, ggplot)
 importFrom(ggplot2, aes)
 importFrom(ggplot2, geom_line)
