--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 0.12.12), RcppArmadillo, RcppEigen, ggplot2
 LinkingTo: Rcpp, RcppArmadillo, RcppEigen
-biocViews: BatchEffect, Microbiome, Bayesian, DirichletMultinomial, FeatureSelection, MCMC
+biocViews: BatchEffect, Microbiome, Bayesian
 RoxygenNote: 6.0.1
 Suggests: knitr,
     rmarkdown
