--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp, evalCpp)
 importFrom(RcppArmadillo)
 importFrom(RcppEigen)
+importFrom(ape)
 importFrom(ggplot2, ggplot)
 importFrom(ggplot2, aes)
 importFrom(ggplot2, geom_line)
