--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,7 @@ importFrom(ggplot2, geom_point)
 importFrom(ggplot2, element_blank)
 importFrom(ggplot2, element_line)
 importFrom(ggplot2, geom_path)
+importFrom(ellipse, ellipse)
+importFrom(vegan, vegdist)
+
 useDynLib(BDMMAcorrect)
