--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: BDMMAcorrect
 Type: Package
-Title: Meta-analysis for the metagenomic read counts data from different cohorts. 
+Title: Meta-analysis for the metagenomic read counts data from different cohorts
 Version: 0.99.20
 Author: ZHENWEI DAI <daizwhao@gmail.com>
 Maintainer: ZHENWEI DAI <daizwhao@gmail.com>
