--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@ export(fdr_cut)
 export(trace_plot)
 export(VBatch)
 importFrom(Rcpp, evalCpp)
-importFrom(RcppArmadillo)
-importFrom(RcppEigen)
-importFrom(ape)
+import(RcppArmadillo)
+import(RcppEigen)
+import(ape)
 importFrom(ggplot2, ggplot)
 importFrom(ggplot2, aes)
 importFrom(ggplot2, geom_line)
@@ -18,6 +18,6 @@ importFrom(ggplot2, element_line)
 importFrom(ggplot2, geom_path)
 importFrom(ellipse, ellipse)
 importFrom(vegan, vegdist)
-importFrom(SummarizedExperiment)
+import(SummarizedExperiment)
 
 useDynLib(BDMMAcorrect)
