--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(trace_plot)
 export(VBatch)
 importFrom(Rcpp, evalCpp)
 importFrom(RcppArmadillo)
-importFrom(RcppEigen)
+import(RcppEigen)
 import(ape)
 importFrom(ggplot2, ggplot)
 importFrom(ggplot2, aes)
