--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@ export(fdr_cut)
 export(trace_plot)
 export(VBatch)
 importFrom(Rcpp, evalCpp)
-importFrom(RcppArmadillo)
-import(RcppEigen)
+import(RcppArmadillo)
+importFrom(RcppEigen)
 import(ape)
 importFrom(ggplot2, ggplot)
 importFrom(ggplot2, aes)
