--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,9 @@ License: GPL (>= 2)
 Depends: R (>= 3.5), vegan, ellipse
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.12), RcppArmadillo, RcppEigen, ggplot2, ape, SummarizedExperiment, BiocGenerics
+Imports: Rcpp (>= 0.12.12), RcppArmadillo, RcppEigen, ggplot2, ape, SummarizedExperiment
 LinkingTo: Rcpp, RcppArmadillo, RcppEigen
 biocViews: BatchEffect, Microbiome, Bayesian
 RoxygenNote: 6.0.1
-Suggests: knitr,
-    rmarkdown
+Suggests: knitr, rmarkdown, BiocGenerics
 VignetteBuilder: knitr
