--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ importFrom(RcppEigen)
 import(ape)
 importFrom(ggplot2, ggplot)
 importFrom(ggplot2, aes)
+importFrom(ggplot2, aes_string)
 importFrom(ggplot2, geom_line)
 importFrom(ggplot2, ggtitle)
 importFrom(ggplot2, theme)
