--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,10 @@ importFrom(ggplot2, geom_path)
 importFrom(ellipse, ellipse)
 importFrom(vegan, vegdist)
 import(SummarizedExperiment)
-importFrom("stats", "quantile", "rbeta", "rbinom", "rexp", "sd")
+importFrom(stats, quantile)
+importFrom(stats, rbeta)
+importFrom(stats, rbinom)
+importFrom(stats, rexp)
+importFrom(stats, sd)
 
 useDynLib(BDMMAcorrect)
