--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BDMMAcorrect
 Type: Package
 Title: Meta-analysis for the metagenomic read counts data from different cohorts
-Version: 0.99.39
+Version: 1.1.1
 Author: ZHENWEI DAI <daizwhao@gmail.com>
 Maintainer: ZHENWEI DAI <daizwhao@gmail.com>
 Date: 2018-10-27
@@ -12,7 +12,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: Rcpp (>= 0.12.12), RcppArmadillo, RcppEigen, stats
 LinkingTo: Rcpp, RcppArmadillo, RcppEigen
-biocViews: BatchEffect, Microbiome, Bayesian
+biocViews: ImmunoOncology, BatchEffect, Microbiome, Bayesian
 RoxygenNote: 6.0.1
 Suggests: knitr, rmarkdown, BiocGenerics
 VignetteBuilder: knitr
